<resources>
    <string name="app_name">Productivity Score Keeper</string>
    <string name="set_name">set name</string>
    <string name="android_learning">+1h android learning</string>
    <string name="android_app">+1h android app coding</string>
    <string name="java_book_reading">+1h java book reading</string>
    <string name="lazy">+1h lazy</string>
    <string name="score0">0</string>
    <string name="res">reset</string>


</resources>
