<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/mainRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    tools:context="com.wili.android.productivityscorekeeper.MainActivity">


    <LinearLayout
        style="@style/mainLinearLayout">


        <LinearLayout
            style="@style/insideLinearLayout">

            <EditText
                style="@style/nameField"
                android:id="@+id/name_player1"/>


            <TextView
                style="@style/score"
                android:id="@+id/score_player1"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_android_player1"
                android:text="@string/android_learning"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_app_coding_player1"
                android:text="@string/android_app"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_java_player1"
                android:text="@string/java_book_reading" />

            <Button
                style="@style/button"
                android:id="@+id/button_1h_lazy_player1"
                android:text="@string/lazy" />

        </LinearLayout>

<View
    style="@style/line"/>

        <LinearLayout
            style="@style/insideLinearLayout">

            <EditText
                style="@style/nameField"
                android:id="@+id/name_player2"/>

            <TextView
                style="@style/score"
                android:id="@+id/score_player2"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_android_player2"
                android:text="@string/android_learning"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_app_coding_player2"
                android:text="@string/android_app"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_java_player2"
                android:text="@string/java_book_reading"/>

            <Button
                style="@style/button"
                android:id="@+id/button_1h_lazy_player2"
                android:text="@string/lazy" />

        </LinearLayout>



    </LinearLayout>

    <Button
        style="@style/resButton"
        android:id="@+id/button_reset"
        android:text="@string/res" />

</RelativeLayout>
